--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-gesture-handler": "^2.3.0",
+    "react-native-image-crop-picker": "^0.37.3",
     "react-native-image-picker": "^4.7.3",
     "react-native-safe-area-context": "^4.1.2",
     "react-native-screens": "^3.13.1",
     "react-native-tiny-toast": "^1.0.7",
+    "react-query": "^3.34.16",
     "yup": "^0.32.11"
   },
   "devDependencies": {
