--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^6.1.1",
     "axios": "^0.26.0",
     "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-gesture-handler": "^2.3.0",
@@ -24,6 +25,7 @@
     "react-native-safe-area-context": "^4.1.2",
     "react-native-screens": "^3.13.1",
     "react-native-tiny-toast": "^1.0.7",
+    "react-native-vector-icons": "^9.1.0",
     "react-query": "^3.34.16",
     "yup": "^0.32.11"
   },
