--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -27,3 +27,7 @@ android.enableJetifier=true
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.99.0
 org.gradle.jvmargs=--add-opens java.base/java.io=ALL-UNNAMED
+MYAPP_UPLOAD_STORE_FILE=tanoplus-marketer-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=tanoplus-marketer-alias
+MYAPP_UPLOAD_STORE_PASSWORD=95823014Ba@
+MYAPP_UPLOAD_KEY_PASSWORD=95823014Ba@
