--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.16.1",
     "@react-native-community/netinfo": "^8.1.0",
+    "@react-native-community/push-notification-ios": "^1.10.1",
+    "@react-native-firebase/app": "^14.5.1",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
@@ -23,6 +25,7 @@
     "react-native-gesture-handler": "^2.3.0",
     "react-native-image-crop-picker": "^0.37.3",
     "react-native-image-picker": "^4.7.3",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.1.2",
     "react-native-screens": "^3.13.1",
     "react-native-tiny-toast": "^1.0.7",
