--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.1.2",
     "react-native-screens": "^3.13.1",
+    "react-native-smooth-pincode-input": "^1.0.9",
     "react-native-tiny-toast": "^1.0.7",
     "react-native-vector-icons": "^9.1.0",
     "react-query": "^3.34.16",
