--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-safe-area-context": "^4.1.2",
     "react-native-screens": "^3.13.1",
     "react-native-smooth-pincode-input": "^1.0.9",
+    "react-native-svg": "^12.3.0",
     "react-native-tiny-toast": "^1.0.7",
     "react-native-vector-icons": "^9.1.0",
     "react-query": "^3.34.16",
