--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.16.1",
     "@react-native-community/netinfo": "^8.1.0",
     "@react-native-community/push-notification-ios": "^1.10.1",
-    "@react-native-firebase/app": "^14.5.1",
+    "@react-native-firebase/app": "14.5.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
