--- a/package.json
+++ b/package.json
@@ -10,29 +10,27 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.16.1",
-    "@react-native-community/netinfo": "^8.1.0",
+    "@react-native-async-storage/async-storage": "^1.17.3",
+    "@react-native-community/netinfo": "^8.2.0",
     "@react-native-community/push-notification-ios": "^1.10.1",
-    "@react-native-firebase/app": "14.5.0",
+    "@react-native-firebase/app": "^14.7.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
-    "@react-navigation/native": "^6.0.8",
-    "@react-navigation/stack": "^6.1.1",
-    "axios": "^0.26.0",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
+    "axios": "^0.26.1",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "react": "17.0.2",
     "react-native": "0.68.1",
-    "react-native-gesture-handler": "^2.3.0",
+    "react-native-gesture-handler": "^2.4.0",
     "react-native-image-crop-picker": "^0.37.3",
-    "react-native-image-picker": "^4.7.3",
     "react-native-push-notification": "^8.1.1",
-    "react-native-safe-area-context": "^4.1.2",
+    "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-native-smooth-pincode-input": "^1.0.9",
-    "react-native-svg": "^12.3.0",
     "react-native-tiny-toast": "^1.0.7",
     "react-native-vector-icons": "^9.1.0",
-    "react-query": "^3.34.16",
+    "react-query": "^3.35.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -40,9 +38,9 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
-    "eslint": "7.14.0",
+    "eslint": "^7.32.0",
     "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.66.2",
+    "metro-react-native-babel-preset": "^0.67.0",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
